--- a/StateManagement/Bloc/codecamp/pubspec.yaml
+++ b/StateManagement/Bloc/codecamp/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   flutter_hooks: ^0.19.0
+  bloc_test: ^9.1.3
 
 dev_dependencies:
   flutter_test:
