--- a/StateManagement/Bloc/codecamp/pubspec.yaml
+++ b/StateManagement/Bloc/codecamp/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_hooks: ^0.19.0
   bloc_test: ^9.1.3
+  firebase_core: ^2.15.0
+  firebase_storage: ^11.2.5
+  image_picker: ^1.0.2
+  uuid: ^3.0.7
+  connectivity_plus: ^4.0.2
+  firebase_auth: ^4.7.2
 
 dev_dependencies:
   flutter_test:
